# Pi

./: README.md  index.html  pyproject.toml
src/pi/: __init__.py
src/pi/agents/: __init__.py  ireland_risk_model.py
tests/: test_ireland_risk_model.py
